--- a/.env
+++ b/.env
@@ -13,10 +13,10 @@ FLASK_ENV=development
 ASSETS_ROOT=/static/assets
 
 # If DEBUG=False (production mode)
-# DB_ENGINE=mysql
-# DB_NAME=appseed_db
-# DB_HOST=localhost
-# DB_PORT=3306
-# DB_USERNAME=appseed_db_usr
-# DB_PASS=<STRONG_PASS>
+DB_ENGINE=mysql
+DB_NAME=enpemo_dashboard
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASS=
 
